--- a/example/jpa_summary_example/src/main/resources/application-h2.yml
+++ b/example/jpa_summary_example/src/main/resources/application-h2.yml
@@ -8,6 +8,6 @@ spring:
     init:
       mode: always
       data-locations:
-        - classpath:member.sql
+        - classpath:data.sql
       schema-locations:
         - classpath:schema-h2.sql
