--- a/example/jpa_summary_example/src/main/resources/application-mysql.yml
+++ b/example/jpa_summary_example/src/main/resources/application-mysql.yml
@@ -5,14 +5,8 @@ spring:
       driver-class-name: com.mysql.jdbc.Driver
       username: root
       password: test1357
+      schema: jpa_mysql
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
     show-sql: true
-  sql:
-    init:
-      mode: always
-      data-locations:
-        - classpath:member.sql
-      schema-locations:
-        - classpath:schema.sql
