--- a/example/jpa_summary_example/src/test/resources/application-mysql.yml
+++ b/example/jpa_summary_example/src/test/resources/application-mysql.yml
@@ -5,14 +5,17 @@ spring:
       driver-class-name: com.mysql.jdbc.Driver
       username: root
       password: test1357
+      schema: jpa_mysql
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none # 테스트 용도의 별도 docker-mysql 을 돌린다고 가정
     show-sql: true
+    defer-datasource-initialization: true # script 파일이 hibernate 초기화 이후 동작하게 하기 위한 옵션
+  #    generate-ddl: true
   sql:
     init:
-      mode: always
+      mode: never
       data-locations:
-        - classpath:member.sql
-      schema-locations:
-        - classpath:schema.sql
+        - classpath:dataset/book_publisher/data.sql
+#      schema-locations:
+#        - classpath:schema.sql
