feat : 1 vs n (review, book)

--- a/example/jpa_summary_example/src/test/resources/application-mysql-test.yml
+++ b/example/jpa_summary_example/src/test/resources/application-mysql-test.yml
@@ -15,7 +15,7 @@ spring:
   sql:
     init:
       mode: never
-      data-locations:
-        - classpath:dataset/book_publisher/data.sql
+#      data-locations:
+#        - classpath:dataset/book_publisher/data.sql
 #      schema-locations:
 #        - classpath:schema.sql
